testing cross alignment fix popup

--- a/static/page_top.css
+++ b/static/page_top.css
@@ -144,5 +144,9 @@ p {
   z-index: 1000 !important;
 }
 
+.ui-dialog .ui-dialog-titlebar-close span { 
+  display: block;
+  margin: 1px; 
+}
 
 
